--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   multiselect_nested: ^1.1.0
   multiselect: ^0.1.0
   multiple_search_selection: ^2.5.4
+  multi_dropdown: ^2.1.0
 
 dev_dependencies:
   flutter_test:
