--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   multi_dropdown: ^2.1.0
   drop_down_list: ^0.0.5
 
+  supabase_flutter: ^1.10.25
+  flutter_dotenv: ^5.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -33,3 +36,4 @@ flutter:
 
   assets:
     - assets/example_data.json
+    - .env
