--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   multi_dropdown: ^2.1.0
   drop_down_list: ^0.0.5
 
+  # dropdown_search
+  # dropdown_button2
+  # animated_custom_dropdown
+
   supabase_flutter: ^1.10.25
   flutter_dotenv: ^5.1.0
 
