--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   multiple_search_selection: ^2.5.4
   multi_dropdown: ^2.1.0
   drop_down_list: ^0.0.5
+  animated_custom_dropdown: ^2.0.0
 
   # dropdown_search
   # dropdown_button2
-  # animated_custom_dropdown
 
   supabase_flutter: ^1.10.25
   flutter_dotenv: ^5.1.0
