--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,9 @@ dependencies:
   drop_down_list: ^0.0.5
   animated_custom_dropdown: ^2.0.0
   dropdown_button2: ^2.3.9
+  dropdown_search: ^5.0.6
 
-  # dropdown_search
+  dio: ^5.3.3
 
   supabase_flutter: ^1.10.25
   flutter_dotenv: ^5.1.0
